--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,10 @@ dependencies:
   provider: ^6.1.2
   tutorial_coach_mark: ^1.2.11
   flutter_screenutil: ^5.9.3
-  firebase_core: ^3.1.0
-  cloud_firestore: ^5.0.1
-  firebase_auth: ^5.1.0
-  firebase_storage: ^12.0.1
+#  firebase_core: ^3.1.0
+#  cloud_firestore: ^5.0.1
+#  firebase_auth: ^5.1.0
+#  firebase_storage: ^12.0.1
   fluttertoast: ^8.2.6
 
 dev_dependencies:
@@ -77,9 +77,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
