--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+
+    repositories {
+        google()
+        jcenter()
+        dependencies {
+            classpath 'com.android.tools.build:gradle:4.1.0'
+
+            classpath "com.google.gms:google-services:4.4.2"
+        }
+    }
+}
 allprojects {
     repositories {
         google()
