--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,9 @@ dependencies:
   provider: ^6.1.2
   tutorial_coach_mark: ^1.2.11
   flutter_screenutil: ^5.9.3
-#  firebase_core: ^3.1.0
+  firebase_core: ^2.27.2
 #  cloud_firestore: ^5.0.1
-#  firebase_auth: ^5.1.0
+  firebase_auth: ^4.4.0
 #  firebase_storage: ^12.0.1
   fluttertoast: ^8.2.6
 
